[package]
name = "cennznet-runtime"
version = "2.2.0-rc4"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"
build = "build.rs"
repository = "https://github.com/cennznet/cennznet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
cennznet-cli = { path = "../cli", default-features = false }
sp-keyring = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
# when running tests for the cennznet-runtime use the "integration_config" feature flag.
# This save us from cases such as 24 hour eras in staking/session tests.
# https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481
cennznet-runtime = { path = ".", features = ["integration_config"] }
libsecp256k1 = { version = "0.5", features = ["static-context", "hmac"] }
ethereum = { version = "0.11.1", default-features = false, features = ["with-codec"] }

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", optional = true, features = ["derive"], default-features = false }
smallvec = "1.6.1"
static_assertions = "1.1.0"
ethabi = { version = "16.0.0", default-features = false }
ethereum = { version = "0.11.1", default-features = false }

pallet-authorship = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
pallet-authority-discovery = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
pallet-babe = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
pallet-grandpa = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
pallet-identity = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
pallet-im-online = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
pallet-multisig = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
pallet-offences = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
pallet-treasury = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
pallet-scheduler = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
pallet-session = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev", features = ["historical"] }
pallet-sudo = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
pallet-timestamp = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
pallet-utility = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }

frame-executive = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
frame-support = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
frame-system = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
frame-try-runtime = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "0.10.0-dev", optional = true }

sp-api = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
sp-authority-discovery = {  git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev"}
sp-block-builder = {  git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev"}
sp-consensus-babe = {  git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "0.10.0-dev" }
sp-core = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
sp-inherents = {  git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
sp-io = {  git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
sp-offchain = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
sp-runtime = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
sp-runtime-interface = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
sp-session = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
sp-std = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
sp-transaction-pool = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
sp-version = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }
sp-staking = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }

futures = { version = "0.3.1", features = ["compat"] }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }

# Used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev", optional = true }
frame-system-benchmarking = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev", optional = true }
hex-literal = { version = "0.3.1", default-features = false }

cennznet-primitives = { path = "../primitives", default-features = false }
crml-cennzx = { path = "../crml/cennzx", default-features = false }
crml-cennzx-rpc-runtime-api = { path = "../crml/cennzx/rpc/runtime-api", default-features = false }
crml-eth-bridge = { path = "../crml/eth-bridge", default-features = false }
crml-erc20-peg = { path = "../crml/erc20-peg", default-features = false }
crml-generic-asset = { path = "../crml/generic-asset", default-features = false }
crml-generic-asset-rpc-runtime-api = { path = "../crml/generic-asset/rpc/runtime-api", default-features = false }
crml-governance = { path = "../crml/governance", default-features = false }
crml-governance-rpc-runtime-api = { path = "../crml/governance/rpc/runtime-api", default-features = false }
crml-nft = { path = "../crml/nft", default-features = false}
crml-nft-rpc-runtime-api = { path = "../crml/nft/rpc/runtime-api", default-features = false }
crml-staking = { path = "../crml/staking", default-features = false}
crml-staking-rpc-runtime-api = { path = "../crml/staking/rpc/runtime-api", default-features = false }
crml-support = { path = "../crml/support", default-features = false }
crml-transaction-payment = { path = "../crml/transaction-payment", default-features = false}
crml-transaction-payment-rpc-runtime-api = { path = "../crml/transaction-payment/rpc/runtime-api", default-features = false}
crml-eth-state-oracle = { path = "../crml/eth-state-oracle", default-features = false }
crml-eth-wallet = { path = "../crml/eth-wallet", default-features = false }
crml-token-approvals = { path = "../crml/token-approvals", default-features = false }

# EVM support
fp-rpc = { default-features = false, git = "https://github.com/cennznet/frontier", rev = "890a535d105d206f7427550794c1973eeff9dd52" }
fp-self-contained = { default-features = false, git = "https://github.com/cennznet/frontier", rev = "890a535d105d206f7427550794c1973eeff9dd52" }
pallet-base-fee = { default-features = false, git = "https://github.com/cennznet/frontier", rev = "890a535d105d206f7427550794c1973eeff9dd52" }
pallet-ethereum = { default-features = false, git = "https://github.com/cennznet/frontier", rev = "890a535d105d206f7427550794c1973eeff9dd52" }
pallet-evm = { default-features = false, git = "https://github.com/cennznet/frontier", rev = "890a535d105d206f7427550794c1973eeff9dd52" }
pallet-evm-precompile-blake2 = { default-features = false, git = "https://github.com/cennznet/frontier", rev = "890a535d105d206f7427550794c1973eeff9dd52" }
pallet-evm-precompile-modexp = { default-features = false, git = "https://github.com/cennznet/frontier", rev = "890a535d105d206f7427550794c1973eeff9dd52" }
pallet-evm-precompile-simple = { default-features = false, git = "https://github.com/cennznet/frontier", rev = "890a535d105d206f7427550794c1973eeff9dd52" }
pallet-evm-precompile-sha3fips = { default-features = false, git = "https://github.com/cennznet/frontier", rev = "890a535d105d206f7427550794c1973eeff9dd52" }
pallet-evm-precompiles-cennzx = { path = "../evm-precompiles/cennzx", default-features = false }
pallet-evm-precompiles-erc721 = { path = "../evm-precompiles/erc721", default-features = false }
pallet-evm-precompiles-erc20 = { path = "../evm-precompiles/erc20", default-features = false }
pallet-evm-precompiles-erc20-peg = { path = "../evm-precompiles/erc20-peg", default-features = false }
pallet-evm-precompiles-state-oracle = { path = "../evm-precompiles/state-oracle", default-features = false }
pallet-evm-precompiles-nft = { path = "../evm-precompiles/nft", default-features = false }
precompile-utils = { path = "../evm-precompiles/utils", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", version = "5.0.0-dev" }

[features]
default = ["std"]
std = [
	"codec/std",
	"ethabi/std",
	"ethereum/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-try-runtime/std",
	"pallet-authorship/std",
	"pallet-authority-discovery/std",
	"pallet-babe/std",
	"crml-eth-wallet/std",
	"pallet-grandpa/std",
	"pallet-identity/std",
	"pallet-im-online/std",
	"pallet-multisig/std",
	"pallet-offences/std",
	"pallet-scheduler/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-treasury/std",
	"pallet-utility/std",
	"serde",
	"sp-api/std",
	"sp-authority-discovery/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-runtime-interface/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"cennznet-primitives/std",
	"crml-cennzx/std",
	"crml-cennzx-rpc-runtime-api/std",
	"crml-erc20-peg/std",
	"crml-eth-bridge/std",
	"crml-eth-state-oracle/std",
	"crml-eth-wallet/std",
	"crml-generic-asset/std",
	"crml-generic-asset-rpc-runtime-api/std",
	"crml-governance/std",
	"crml-governance-rpc-runtime-api/std",
	"crml-nft/std",
	"crml-nft-rpc-runtime-api/std",
	"crml-staking/std",
	"crml-staking-rpc-runtime-api/std",
	"crml-support/std",
	"crml-transaction-payment/std",
	"crml-transaction-payment-rpc-runtime-api/std",
	"crml-token-approvals/std",
	"fp-rpc/std",
	"fp-self-contained/std",
	"pallet-base-fee/std",
	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-evm-precompile-blake2/std",
	"pallet-evm-precompile-modexp/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-evm-precompiles-cennzx/std",
	"pallet-evm-precompiles-erc20/std",
	"pallet-evm-precompiles-erc20-peg/std",
	"pallet-evm-precompiles-erc721/std",
	"pallet-evm-precompiles-nft/std",
	"pallet-evm-precompiles-state-oracle/std",
	"precompile-utils/std",
	"rustc-hex/std",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-utility/try-runtime",
	"cennznet-primitives/try-runtime",
	"crml-cennzx/try-runtime",
	"crml-staking/try-runtime",
	"crml-transaction-payment/try-runtime",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"crml-cennzx/runtime-benchmarks",
	"crml-nft/runtime-benchmarks",
	"crml-staking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
]
integration_config = []
test-doughnut = []
