[package]
name = "cennznet-testing"
version = "1.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
description = "Test utilities for CENNZnet node."
edition = "2018"
repository = "https://github.com/cennznet/cennznet"

[dependencies]
codec = { version = "1.2.0", package = "parity-scale-codec" }
cennznet-executor = { path = "../executor" }
cennznet-primitives = { path = "../primitives" }
cennznet-runtime = { path = "../runtime" }
crml-staking = { path = "../crml/staking" }
crml-transaction-payment = { path="../crml/transaction-payment", default-features = false }

frame-system = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3" }
pallet-contracts = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3" }
pallet-grandpa = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3" }
pallet-session = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3" }
sc-block-builder = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3" }
sc-client = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3" }
sc-client-db = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3" }
sc-client-api = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3" }
sc-executor = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3", features = ["wasmtime"]}
sp-core = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3" }
sp-io = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3" }
sp-keyring = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3" }
sp-runtime = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3" }
sp-consensus = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3" }
sp-api = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3" }
sp-finality-tracker = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3" }
sp-timestamp = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3" }
sp-block-builder = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3" }
sp-inherents = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3" }
sp-blockchain = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3" }
substrate-test-client = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3" }

wabt = "0.9.2"
log = "0.4.8"
tempfile = "3.1.0"
fs_extra = "1.1.0"

[dev-dependencies]
criterion = "0.3.0"
sc-cli = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3" }
sc-service = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3", features = ["rocksdb"] }

[[bench]]
name = "import"
harness = false
