[package]
name = "cennznet-testing"
version = "1.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
description = "Test utilities for CENNZnet node."
edition = "2018"
repository = "https://github.com/cennznet/cennznet"

[dependencies]
codec = { version = "1.3.0", package = "parity-scale-codec" }
cennznet-executor = { path = "../executor" }
cennznet-primitives = { path = "../primitives" }
cennznet-runtime = { path = "../runtime" }
crml-staking = { path = "../crml/staking" }
crml-transaction-payment = { path="../crml/transaction-payment", default-features = false }

frame-system = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
pallet-contracts = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
pallet-generic-asset = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
pallet-grandpa = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
pallet-session = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sc-block-builder = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sc-client = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sc-client-db = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sc-client-api = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sc-executor = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4", features = ["wasmtime"]}
sp-core = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sp-io = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sp-keyring = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sp-runtime = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sp-consensus = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sp-api = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sp-finality-tracker = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sp-timestamp = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sp-block-builder = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sp-inherents = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sp-blockchain = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
substrate-test-client = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }

wabt = "0.9.2"
log = "0.4.8"
tempfile = "3.1.0"
fs_extra = "1.1.0"

[dev-dependencies]
criterion = "0.3.0"
sc-cli = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
sc-service = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4", features = ["rocksdb"] }

[[bench]]
name = "import"
harness = false
