[package]
name = "node-inspect"
version = "0.9.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0" }
thiserror = "1.0"
derive_more = "0.99"
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"}
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
structopt = "0.3.8"
