[package]
name = "crml-attestation"
version = "2.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.102", default-features = false, features = ["derive"] }
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "85fa0ab80c3ceccf4bb98380d7833578aaf8815e", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", rev = "85fa0ab80c3ceccf4bb98380d7833578aaf8815e", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "85fa0ab80c3ceccf4bb98380d7833578aaf8815e", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", rev = "85fa0ab80c3ceccf4bb98380d7833578aaf8815e", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", rev = "85fa0ab80c3ceccf4bb98380d7833578aaf8815e", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", rev = "85fa0ab80c3ceccf4bb98380d7833578aaf8815e", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", rev = "85fa0ab80c3ceccf4bb98380d7833578aaf8815e", default-features = false }

[features]
default = ["std"]
std = [
	"serde/std",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
]

runtime-benchmarks = ["frame-benchmarking"]
