[package]
name = "crml-cennzx-spot"
version = "1.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"

[dependencies]
codec = { version = "1.2.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
primitive-types = { version = "0.6.1", default-features = false }
serde = { version = "1.0", optional = true }
cennznet-primitives = { path = "../../primitives", default-features = false }
frame-support = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1", default-features = false }
frame-system = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1", default-features = false }
pallet-generic-asset = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1", default-features = false }
sp-core = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1", default-features = false }
sp-io = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1", default-features = false }
sp-runtime = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1", default-features = false }
sp-std = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc3.1", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"primitive-types/std",
	"serde",
	"cennznet-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-generic-asset/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
