[package]
name = "crml-cennzx"
version = "2.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false }
serde = { version = "1.0.102", optional = true }
cennznet-primitives = { path = "../../primitives", default-features = false }
crml-generic-asset = { path = "../generic-asset", default-features = false }
crml-support = { path = "../support", default-features = false }
frame-support = { git = "https://github.com/cennznet/substrate", rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521", default-features = false }
frame-system = { git = "https://github.com/cennznet/substrate", rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521", default-features = false }
frame-benchmarking = { git = "https://github.com/cennznet/substrate", rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521", default-features = false, optional = true }
sp-core = { git = "https://github.com/cennznet/substrate", rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521", default-features = false }
sp-io = { git = "https://github.com/cennznet/substrate", rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521", default-features = false }
sp-runtime = { git = "https://github.com/cennznet/substrate", rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521", default-features = false }
sp-std = { git = "https://github.com/cennznet/substrate", rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521", default-features = false }

[dev-dependencies]
cennznet-runtime = { path = "../../runtime" }
sp-keyring = { git = "https://github.com/cennznet/substrate", rev = "771dfdd046da2ce4f7b1865ac40ebe805a821521" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"cennznet-primitives/std",
	"crml-generic-asset/std",
	"crml-support/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking"
]
try-runtime = ["frame-support/try-runtime"]
