[package]
name = "crml-cennzx"
version = "2.0.1"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2021"

[dependencies]
codec = { version = "3.0.0", package = "parity-scale-codec", default-features = false }
serde = { version = "1.0.102", optional = true, default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
cennznet-primitives = { path = "../../primitives", default-features = false }
crml-generic-asset = { path = "../generic-asset", default-features = false }
crml-support = { path = "../support", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false, optional = true }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }

[dev-dependencies]
cennznet-runtime = { path = "../../runtime" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"cennznet-primitives/std",
	"crml-generic-asset/std",
	"crml-support/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"scale-info/std"
]
runtime-benchmarks = [
	"frame-benchmarking"
]
try-runtime = ["frame-support/try-runtime"]
